--- a/Py-Maths_Equation_Inequation_premier_degre.tex
+++ b/Py-Maths_Equation_Inequation_premier_degre.tex
@@ -25,7 +25,7 @@
 }%
 \fancyhead[C]{%
 \begin{Huge}%
-\textbf{Equation Inéquation premier degre}%
+\textbf{Equation\_Inequation\_premier\_degre}%
 \end{Huge}%
 }%
 \fancyfoot[L]{%
@@ -58,24 +58,24 @@ Générateur d'exercices avec leurs corrections%
 Avec les équations du premier degré suivantes : %
 \subsection*{Equation niveau 1 : }%
 \label{subsec:Equationniveau1}%
-\ $38 - 26x = 24 + 30 $%
+\ $50 - 39x = 48 + 5 $%
 \vspace{5mm}%
 \newline%
-\ $13 + 33x  = 34 + 49$%
+\ $13 + 40x  = 5 + 7$%
 \vspace{5mm}%
 \newline%
-\ $45 + 3 = 18x - 31$
+\ $27 + 3 = 33x - 7$
 
 %
 \subsection*{Equation niveau 2 : }%
 \label{subsec:Equationniveau2}%
-$\frac{38}{26}x + 24 = \frac{30}{13} - 33x$%
+$\frac{50}{39}x + 48 = \frac{5}{13} - 40x$%
 \vspace{5mm}%
 \newline%
-$\ 34 + \frac{49}{45}x = \frac{3}{18}$%
+$\ 5 + \frac{7}{27}x = \frac{3}{33}$%
 \vspace{5mm}%
 \newline%
-$\frac{38}{24}x - 13 = \frac{34}{45} - 31x$%
+$\frac{50}{48}x - 13 = \frac{5}{27} - 7x$%
 \vspace{5mm}%
 \newline
 
@@ -90,16 +90,16 @@ Equations n°1%
 \begin{align*}%
 \vspace{10mm}%
 \newline%
-\  \Leftrightarrow 38 - 26x &= 24 + 30     & \Leftrightarrow 13 + 33x  &= 34 + 49       & \Leftrightarrow 45 + 3 &= 18x - 31\\%
+\  \Leftrightarrow 50 - 39x &= 48 + 5     & \Leftrightarrow 13 + 40x  &= 5 + 7       & \Leftrightarrow 27 + 3 &= 33x - 7\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow 38 - 38 - 26x &= 24 + 30 -38      & \Leftrightarrow 13 - 13 + 33x  &= 34 + 49 + 13        & \Leftrightarrow 45 + 3 + 31 &= 18x - 31 +31\\%
+\  \Leftrightarrow 50 - 50 - 39x &= 48 + 5 -50      & \Leftrightarrow 13 - 13 + 40x  &= 5 + 7 + 13        & \Leftrightarrow 27 + 3 + 7 &= 33x - 7 +7\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow \frac{-26x}{-26} &= \frac{16}{-26}      & \Leftrightarrow \frac{33x}{33} &= \frac{96}{33}      & \Leftrightarrow \frac{79}{18} &= \frac{18x}{18}\\%
+\  \Leftrightarrow \frac{-39x}{-39} &= \frac{3}{-39}      & \Leftrightarrow \frac{40x}{40} &= \frac{25}{40}      & \Leftrightarrow \frac{37}{33} &= \frac{33x}{33}\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow  x &= -0.6      & \Leftrightarrow  x &= 2.9      & \Leftrightarrow  x &= 4.4\\%
+\  \Leftrightarrow  x &= -0.1      & \Leftrightarrow  x &= 0.6      & \Leftrightarrow  x &= 1.1\\%
 \end{align*}
 
 %
