premier correction du niveau 2 est équation premie r degré

--- a/Py-Maths_Equation_Inequation_premier_degre.tex
+++ b/Py-Maths_Equation_Inequation_premier_degre.tex
@@ -58,24 +58,24 @@ Générateur d'exercices avec leurs corrections%
 Avec les équations du premier degré suivantes : %
 \subsection*{Equation niveau 1 : }%
 \label{subsec:Equationniveau1}%
-\ $50 - 39x = 48 + 5 $%
+\ $26 - 42x = 32 + 43 $%
 \vspace{5mm}%
 \newline%
-\ $13 + 40x  = 5 + 7$%
+\ $2 + 2x  = 24 + 37$%
 \vspace{5mm}%
 \newline%
-\ $27 + 3 = 33x - 7$
+\ $3 + 40 = 24x - 10$
 
 %
 \subsection*{Equation niveau 2 : }%
 \label{subsec:Equationniveau2}%
-$\frac{50}{39}x + 48 = \frac{5}{13} - 40x$%
+$\frac{26}{42}x + 32 = \frac{43}{2} - 2x$%
 \vspace{5mm}%
 \newline%
-$\ 5 + \frac{7}{27}x = \frac{3}{33}$%
+$\ 24 + \frac{37}{3}x = \frac{40}{24}$%
 \vspace{5mm}%
 \newline%
-$\frac{50}{48}x - 13 = \frac{5}{27} - 7x$%
+$\frac{26}{32}x - 2 = \frac{24}{3} - 10x$%
 \vspace{5mm}%
 \newline
 
@@ -84,22 +84,40 @@ $\frac{50}{48}x - 13 = \frac{5}{27} - 7x$%
 \section*{Correction Equation du premier degré n°1}%
 \label{sec:CorrectionEquationdupremierdegrn1}%
 Niveau 1 :%
-\subsection{bon jour}%
-\label{subsec:bonjour}%
-Equations n°1%
+\subsection{Equations n°1}%
+\label{subsec:Equationsn1}%
 \begin{align*}%
-\vspace{10mm}%
-\newline%
-\  \Leftrightarrow 50 - 39x &= 48 + 5     & \Leftrightarrow 13 + 40x  &= 5 + 7       & \Leftrightarrow 27 + 3 &= 33x - 7\\%
+\  \Leftrightarrow 26 - 42x &= 32 + 43     & \Leftrightarrow 2 + 2x  &= 24 + 37       & \Leftrightarrow 3 + 40 &= 24x - 10\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow 50 - 50 - 39x &= 48 + 5 -50      & \Leftrightarrow 13 - 13 + 40x  &= 5 + 7 + 13        & \Leftrightarrow 27 + 3 + 7 &= 33x - 7 +7\\%
+\  \Leftrightarrow 26 - 26 - 42x &= 32 + 43 -26      & \Leftrightarrow 2 - 2 + 2x  &= 24 + 37 + 2        & \Leftrightarrow 3 + 40 + 10 &= 24x - 10 +10\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow \frac{-39x}{-39} &= \frac{3}{-39}      & \Leftrightarrow \frac{40x}{40} &= \frac{25}{40}      & \Leftrightarrow \frac{37}{33} &= \frac{33x}{33}\\%
+\  \Leftrightarrow \frac{-42x}{-42} &= \frac{49}{-42}      & \Leftrightarrow \frac{2x}{2} &= \frac{63}{2}      & \Leftrightarrow \frac{53}{24} &= \frac{24x}{24}\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow  x &= -0.1      & \Leftrightarrow  x &= 0.6      & \Leftrightarrow  x &= 1.1\\%
+\  \Leftrightarrow  x &= -1.2      & \Leftrightarrow  x &= 31.5      & \Leftrightarrow  x &= 2.2\\%
+\end{align*}
+
+%
+\subsection{Equations n°2}%
+\label{subsec:Equationsn2}%
+\begin{align*}%
+\  \Leftrightarrow \frac{26}{42}x + 32 &= \frac{43}{2} - 2x \\%
+\vspace{5mm}%
+\newline%
+\  \Leftrightarrow \frac{26}{42}x + 32 + 2x  &= \frac{43}{2} - 2x +2x \\%
+\vspace{5mm}%
+\newline%
+\  \Leftrightarrow 2.6x + 32 - 32 &= \frac{43}{2}	- 32 \\%
+\vspace{5mm}%
+\newline%
+\  \Leftrightarrow \frac{2.6x}{2.6} &= \frac{-10.5}{2.6} \\%
+\vspace{5mm}%
+\newline%
+\  \Leftrightarrow x &= -4.038461538461538 \\%
+\vspace{5mm}%
+\newline%
 \end{align*}
 
 %
