correction equation 2 niveau 2

--- a/Py-Maths_Equation_Inequation_premier_degre.tex
+++ b/Py-Maths_Equation_Inequation_premier_degre.tex
@@ -58,24 +58,24 @@ Générateur d'exercices avec leurs corrections%
 Avec les équations du premier degré suivantes : %
 \subsection*{Equation niveau 1 : }%
 \label{subsec:Equationniveau1}%
-\ $26 - 42x = 32 + 43 $%
+\ $34 - 43x = 31 + 49 $%
 \vspace{5mm}%
 \newline%
-\ $2 + 2x  = 24 + 37$%
+\ $9 + 13x  = 30 + 47$%
 \vspace{5mm}%
 \newline%
-\ $3 + 40 = 24x - 10$
+\ $48 + 17 = 34x - 22$
 
 %
 \subsection*{Equation niveau 2 : }%
 \label{subsec:Equationniveau2}%
-$\frac{26}{42}x + 32 = \frac{43}{2} - 2x$%
+$\frac{34}{43}x + 31 = \frac{49}{9} - 13x$%
 \vspace{5mm}%
 \newline%
-$\ 24 + \frac{37}{3}x = \frac{40}{24}$%
+$\ 30 + \frac{47}{48}x = \frac{17}{34}$%
 \vspace{5mm}%
 \newline%
-$\frac{26}{32}x - 2 = \frac{24}{3} - 10x$%
+$\frac{34}{31}x - 9 = \frac{30}{48} - 22x$%
 \vspace{5mm}%
 \newline
 
@@ -87,35 +87,35 @@ Niveau 1 :%
 \subsection{Equations n°1}%
 \label{subsec:Equationsn1}%
 \begin{align*}%
-\  \Leftrightarrow 26 - 42x &= 32 + 43     & \Leftrightarrow 2 + 2x  &= 24 + 37       & \Leftrightarrow 3 + 40 &= 24x - 10\\%
+\  \Leftrightarrow 34 - 43x &= 31 + 49     & \Leftrightarrow 9 + 13x  &= 30 + 47       & \Leftrightarrow 48 + 17 &= 34x - 22\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow 26 - 26 - 42x &= 32 + 43 -26      & \Leftrightarrow 2 - 2 + 2x  &= 24 + 37 + 2        & \Leftrightarrow 3 + 40 + 10 &= 24x - 10 +10\\%
+\  \Leftrightarrow 34 - 34 - 43x &= 31 + 49 -34      & \Leftrightarrow 9 - 9 + 13x  &= 30 + 47 + 9        & \Leftrightarrow 48 + 17 + 22 &= 34x - 22 +22\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow \frac{-42x}{-42} &= \frac{49}{-42}      & \Leftrightarrow \frac{2x}{2} &= \frac{63}{2}      & \Leftrightarrow \frac{53}{24} &= \frac{24x}{24}\\%
+\  \Leftrightarrow \frac{-43x}{-43} &= \frac{46}{-43}      & \Leftrightarrow \frac{13x}{13} &= \frac{86}{13}      & \Leftrightarrow \frac{87}{34} &= \frac{34x}{34}\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow  x &= -1.2      & \Leftrightarrow  x &= 31.5      & \Leftrightarrow  x &= 2.2\\%
+\  \Leftrightarrow  x &= -1.1      & \Leftrightarrow  x &= 6.6      & \Leftrightarrow  x &= 2.6\\%
 \end{align*}
 
 %
 \subsection{Equations n°2}%
 \label{subsec:Equationsn2}%
 \begin{align*}%
-\  \Leftrightarrow \frac{26}{42}x + 32 &= \frac{43}{2} - 2x \\%
+\  \Leftrightarrow \frac{34}{43}x + 31 &= \frac{49}{9} - 13x       &     \Leftrightarrow 30 + \frac{47}{48}x &= \frac{17}{34} \\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow \frac{26}{42}x + 32 + 2x  &= \frac{43}{2} - 2x +2x \\%
+\  \Leftrightarrow \frac{34}{43}x + 31 + 13x  &= \frac{49}{9} - 13x +13x    &    \Leftrightarrow 30 - 30 + \frac{47}{48}x &= \frac{17}{34} + 30\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow 2.6x + 32 - 32 &= \frac{43}{2}	- 32 \\%
+\  \Leftrightarrow 13.8x + 31 - 31 &= \frac{49}{9}	- 31       &      \Leftrightarrow \frac{47}{48}x &= 30.5 \\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow \frac{2.6x}{2.6} &= \frac{-10.5}{2.6} \\%
+\  \Leftrightarrow \frac{13.8x}{13.8} &= \frac{-25.6}{13.8}     &      \Leftrightarrow \frac{47}{48}x \times \frac{48}{47} &= 30.5 x \times \frac{48}{47}\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow x &= -4.038461538461538 \\%
+\  \Leftrightarrow x &= -1.9    &     \Leftrightarrow x &= 31.1 \\%
 \vspace{5mm}%
 \newline%
 \end{align*}
