nv 3 exo equation 2 inc / fichiers à mettre au propre

--- a/default_filepath.tex
+++ b/default_filepath.tex
@@ -17,8 +17,8 @@
 Niveau 1 :%
 \begin{align*}%
 \begin{cases}%
-\  47x + 38y &= 26 \\%
-\  3x + 1y &= 13 \\%
+\  35x + 47y &= 10 \\%
+\  14x + 33y &= 41 \\%
 \end{cases}%
 \\%
 \end{align*}%
@@ -26,40 +26,40 @@ Niveau 1 :%
 \vspace{5mm}%
 \newline%
 \begin{align*}%
-\  \Leftrightarrow 3x + 1y - 1y &= 13 - 1y \\%
+\  \Leftrightarrow 14x + 33y - 33y &= 41 - 33y \\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow 3x &= -1y + 13\\%
+\  \Leftrightarrow 14x &= -33y + 41\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow \frac{3x}{3} &= \frac{-1y + 13}{3}\\%
+\  \Leftrightarrow \frac{14x}{14} &= \frac{-33y + 41}{14}\\%
 \vspace{5mm}%
 \newline%
 \end{align*}%
 \\%
-\ \text{On remplace x par $\frac{-1y + 13}{3}$ dans l'équation 1}\\%
+\ \text{On remplace x par $\frac{-33y + 41}{14}$ dans l'équation 1}\\%
 \vspace{5mm}%
 \newline%
 \begin{align*}%
-\ \Leftrightarrow  47 \times \frac{-1y + 13}{3} + 38y &= 26\\%
+\ \Leftrightarrow  35 \times \frac{-33y + 41}{14} + 47y &= 10\\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  47 \times \frac{-1y}{3} + 47 \times \frac{13}{3} + 38y &= 26\\%
+\ \Leftrightarrow  35 \times \frac{-33y}{14} + 35 \times \frac{41}{14} + 47y &= 10\\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  22.33y + 203.67 &= 26\\%
+\ \Leftrightarrow  -35.5y + 102.5 &= 10\\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  22.33y + 203.67 - 203.67 &= 26 - 203.67\\%
+\ \Leftrightarrow  -35.5y + 102.5 - 102.5 &= 10 - 102.5\\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  22.33y  &= -177.67\\%
+\ \Leftrightarrow  -35.5y  &= -92.5\\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  \frac{22.33y}{22.33}  &= \frac{-177.67}{22.33}\\%
+\ \Leftrightarrow  \frac{-35.5y}{-35.5}  &= \frac{-92.5}{-35.5}\\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  y  &\approx -7.96\\%
+\ \Leftrightarrow  y  &\approx 2.61\\%
 \vspace{5mm}%
 \newline%
 \end{align*}%
@@ -67,27 +67,27 @@ Niveau 1 :%
 \vspace{5mm}%
 \newline%
 \begin{align*}%
-\ \Leftrightarrow  47x + 38 \times -7.96 &= 26 \\%
+\ \Leftrightarrow  35x + 47 \times 2.61 &= 10 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  47x + -302.48 --302.48 &= 26 - -302.48 \\%
+\ \Leftrightarrow  35x + 122.67 -122.67 &= 10 - 122.67 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  47x  &= 328.48 \\%
+\ \Leftrightarrow  35x  &= -112.67 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  \frac{47x}{47} &= \frac{328.48}{47}\\%
+\ \Leftrightarrow  \frac{35x}{35} &= \frac{-112.67}{35}\\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  x &\approx 6.99 \\%
+\ \Leftrightarrow  x &\approx -3.22 \\%
 \vspace{5mm}%
 \newline%
 \end{align*}%
 Niveau 2 :%
 \begin{align*}%
 \begin{cases}%
-\  \frac{47}{38}x + 3y &= 1y - 26 \\%
-\  13x + 15y &= 17y + \frac{42}{48} \\%
+\  \frac{35}{47}x + 14y &= 33y - 10 \\%
+\  41x + 29y &= 1y + \frac{3}{46} \\%
 \end{cases}%
 \\%
 \end{align*}%
@@ -95,43 +95,43 @@ Niveau 2 :%
 \vspace{5mm}%
 \newline%
 \begin{align*}%
-\  \Leftrightarrow  \frac{47}{38}x + 3y - 3y &= 1y - 26 - 3y \\%
+\  \Leftrightarrow  \frac{35}{47}x + 14y - 14y &= 33y - 10 - 14y \\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow  \frac{47}{38}x &= -2y - 26 \\%
+\  \Leftrightarrow  \frac{35}{47}x &= 19y - 10 \\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow  \frac{47}{38}x \times \frac{38}{47} &= (-2y - 26) \times \frac{38}{47} \\%
+\  \Leftrightarrow  \frac{35}{47}x \times \frac{47}{35} &= (19y - 10) \times \frac{47}{35} \\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow  x &= -1.62y - 21.02\\%
+\  \Leftrightarrow  x &= 25.51y - 13.43\\%
 \vspace{5mm}%
 \newline%
 \end{align*}%
 \\%
-\ \text{On remplace x par $-1.62y - 21.02$ dans l'équation 2}\\%
+\ \text{On remplace x par $25.51y - 13.43$ dans l'équation 2}\\%
 \vspace{5mm}%
 \newline%
 \begin{align*}%
-\ \Leftrightarrow  13(-1.62y - 21.02) + 15y &= 17y + \frac{42}{48} \\%
+\ \Leftrightarrow  41(25.51y - 13.43) + 29y &= 1y + \frac{3}{46} \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  -21.06y - 273.26 + 15y &= 17y + \frac{42}{48} \\%
+\ \Leftrightarrow  1045.91y - 550.63 + 29y &= 1y + \frac{3}{46} \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  -21.06y - 273.26 +273.26 + 15y &= 17y + \frac{42}{48} +273.26 \\%
+\ \Leftrightarrow  1045.91y - 550.63 +550.63 + 29y &= 1y + \frac{3}{46} +550.63 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  -21.06y +15y - 17y &= 17y -17y + 274.13 \\%
+\ \Leftrightarrow  1045.91y +29y - 1y &= 1y -1y + 550.7 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  -23.06y &= 274.13 \\%
+\ \Leftrightarrow  1073.91y &= 550.7 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  \frac{-23.06y}{-23.06} &= \frac{274.13}{-23.06} \\%
+\ \Leftrightarrow  \frac{1073.91y}{1073.91} &= \frac{550.7}{1073.91} \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow y &\approx -11.89 \\%
+\ \Leftrightarrow y &\approx 0.51 \\%
 \vspace{5mm}%
 \newline%
 \end{align*}%
@@ -139,27 +139,27 @@ Niveau 2 :%
 \vspace{5mm}%
 \newline%
 \begin{align*}%
-\  13x + 15 \times -11.89 &= 17 \times -11.89 + \frac{42}{48} \\%
+\  41x + 29 \times 0.51 &= 1 \times 0.51 + \frac{3}{46} \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow 13x + -178.35 - -178.35 &= -202.13 +\frac{42}{48} --178.35 \\%
+\ \Leftrightarrow 41x + 14.79 - 14.79 &= 0.51 +\frac{3}{46} -14.79 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow 13x &= -22.91 \\%
+\ \Leftrightarrow 41x &= -14.21 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow \frac{13x}{13} &= \frac{-22.91}{13} \\%
+\ \Leftrightarrow \frac{41x}{41} &= \frac{-14.21}{41} \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow x &\approx -1.76 \\%
+\ \Leftrightarrow x &\approx -0.35 \\%
 \vspace{5mm}%
 \newline%
 \end{align*}%
 Niveau 3 :%
 \begin{align*}%
 \begin{cases}%
-\  47(38x - 3y) + 1y &= 26y\frac{13}{15} \\%
-\  17x - \frac{42y + 48}{42} &= 9(23x - 36) \\%
+\  35(47x - 14y) + 33y &= 10y\frac{41}{29} \\%
+\  1x - \frac{3y + 46}{13} &= 30(42x - 23) \\%
 \end{cases}%
 \\%
 \end{align*}%
@@ -167,67 +167,67 @@ Niveau 3 :%
 \vspace{5mm}%
 \newline%
 \begin{align*}%
-\   \Leftrightarrow 47\times38x + 47\times(-3y) + 1y &= 26y \times \frac{13}{15} \\%
+\   \Leftrightarrow 35\times47x + 35\times(-14y) + 33y &= 10y \times \frac{41}{29} \\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow 1786x - 141y + 1y &= 22.53y \\%
+\  \Leftrightarrow 1645x - 490y + 33y &= 14.14y \\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow 1786x - 140y &= 22.53y\\%
+\  \Leftrightarrow 1645x - 457y &= 14.14y\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow 1786x - 140y + 140y &= 22.53y + 140y\\%
+\  \Leftrightarrow 1645x - 457y + 457y &= 14.14y + 457y\\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow 1786x &= 162.53y \\%
+\  \Leftrightarrow 1645x &= 471.14y \\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow \frac{1786x}{1786} &= \frac{162.53y}{1786} \\%
+\  \Leftrightarrow \frac{1645x}{1645} &= \frac{471.14y}{1645} \\%
 \vspace{5mm}%
 \newline%
-\  \Leftrightarrow x &= 0.09y \\%
+\  \Leftrightarrow x &= 0.29y \\%
 \vspace{5mm}%
 \newline%
 \end{align*}%
 \\%
-\ \text{On remplace x par $0.09y$ dans l'équation 1}\\%
+\ \text{On remplace x par $0.29y$ dans l'équation 1}\\%
 \vspace{5mm}%
 \newline%
 \begin{align*}%
-\ \Leftrightarrow  17 \times 0.09y - \frac{42y + 48}{42} &= 9((23 \times 0.09y) - 36) \\%
+\ \Leftrightarrow  1 \times 0.29y - \frac{3y + 46}{13} &= 30((42 \times 0.29y) - 23) \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  1.53y - \frac{42y + 48}{42} &= 9((2.07y) - 36) \\%
+\ \Leftrightarrow  0.29y - \frac{3y + 46}{13} &= 30((12.18y) - 23) \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  \frac{64.26y}{42} - \frac{42y + 48}{42} &= 18.63y - 324 \\%
+\ \Leftrightarrow  \frac{3.77y}{13} - \frac{3y + 46}{13} &= 365.4y - 690 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow    \frac{22.26y - 48}{42} &= 18.63y - 324 \\%
+\ \Leftrightarrow    \frac{0.77y - 46}{13} &= 365.4y - 690 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow    \frac{22.26y - 48}{42} - 18.63y &= 18.63y - 324 - 18.63y\\%
+\ \Leftrightarrow    \frac{0.77y - 46}{13} - 365.4y &= 365.4y - 690 - 365.4y\\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow    \frac{22.26y - 48}{42} - \frac{782.46y}{42} &= 18.63y - 324 - \frac{782.46y}{42}\\%
+\ \Leftrightarrow    \frac{0.77y - 46}{13} - \frac{4750.2y}{13} &= 365.4y - 690 - \frac{4750.2y}{13}\\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow   \frac{-760.2y - 48}{42}  &= - 324 \\%
+\ \Leftrightarrow   \frac{-4749.43y - 46}{13}  &= - 690 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow   \frac{-760.2y - 48}{42}  \times 42 &= - 324 \times 42 \\%
+\ \Leftrightarrow   \frac{-4749.43y - 46}{13}  \times 13 &= - 690 \times 13 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow   -760.2y - 48 + 48 &= - 13608 + 48 \\%
+\ \Leftrightarrow   -4749.43y - 46 + 46 &= - 8970 + 46 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow   -760.2y &= - 13560 \\%
+\ \Leftrightarrow   -4749.43y &= - 8924 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow   \frac{-760.2y}{-760.2} &=  \frac{-13560}{-760.2} \\%
+\ \Leftrightarrow   \frac{-4749.43y}{-4749.43} &=  \frac{-8924}{-4749.43} \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow   y &\approx  17.84 \\%
+\ \Leftrightarrow   y &\approx  1.88 \\%
 \vspace{5mm}%
 \newline%
 \end{align*}%
@@ -235,19 +235,19 @@ Niveau 3 :%
 \vspace{5mm}%
 \newline%
 \begin{align*}%
-\ \Leftrightarrow  47x + 38 \times -7.96 &= 26 \\%
+\ \Leftrightarrow  35x + 47 \times 2.61 &= 10 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  47x + -302.48 --302.48 &= 26 - -302.48 \\%
+\ \Leftrightarrow  35x + 122.67 -122.67 &= 10 - 122.67 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  47x  &= 328.48 \\%
+\ \Leftrightarrow  35x  &= -112.67 \\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  \frac{47x}{47} &= \frac{328.48}{47}\\%
+\ \Leftrightarrow  \frac{35x}{35} &= \frac{-112.67}{35}\\%
 \vspace{5mm}%
 \newline%
-\ \Leftrightarrow  x &\approx 6.99 \\%
+\ \Leftrightarrow  x &\approx -3.22 \\%
 \vspace{5mm}%
 \newline%
 \end{align*}
